Primer script de control del Robominer

--- a/robominer_control/config/controller.yaml
+++ b/robominer_control/config/controller.yaml
@@ -1,4 +1,4 @@
-robominer_controller:
+/robominer:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
