--- a/robominer_control/config/controller.yaml
+++ b/robominer_control/config/controller.yaml
@@ -4,6 +4,7 @@
     type: joint_state_controller/JointStateController
     publish_rate: 50
 
+#La p original de todos los controladores era 100 pero para que se pongan los pies en la posicion correcta hubo que subir a 1000 las p de sus articulaciones (Rev11)
 
   # Position Controllers --------------------------------------
   # Pata r1
@@ -22,7 +23,7 @@
   Rev11_r_1_position_controller:
     type: effort_controllers/JointPositionController
     joint: Rev11_r_1
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+    pid: {p: 1000.0, i: 0.01, d: 10.0}
   
 
   # Pata r2
@@ -41,7 +42,7 @@
   Rev11_r_2_position_controller:
     type: effort_controllers/JointPositionController
     joint: Rev11_r_2
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+    pid: {p: 1000.0, i: 0.01, d: 10.0}
   
 
   # Pata r3
@@ -60,7 +61,7 @@
   Rev11_r_3_position_controller:
     type: effort_controllers/JointPositionController
     joint: Rev11_r_3
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+    pid: {p: 1000.0, i: 0.01, d: 10.0}
   
   
   # Pata l1
@@ -79,7 +80,7 @@
   Rev11_l_1_position_controller:
     type: effort_controllers/JointPositionController
     joint: Rev11_l_1
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+    pid: {p: 1000.0, i: 0.01, d: 10.0}
   
 
   # Pata l2
@@ -98,7 +99,7 @@
   Rev11_l_2_position_controller:
     type: effort_controllers/JointPositionController
     joint: Rev11_l_2
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+    pid: {p: 1000.0, i: 0.01, d: 10.0}
  
 
   # Pata l3
@@ -117,7 +118,7 @@
   Rev11_l_3_position_controller:
     type: effort_controllers/JointPositionController
     joint: Rev11_l_3
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+    pid: {p: 1000.0, i: 0.01, d: 10.0}
   
 
   
