--- a/robominer_description/CMakeLists.txt
+++ b/robominer_description/CMakeLists.txt
@@ -32,4 +32,19 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+install(DIRECTORY
+  worlds
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+install(DIRECTORY
+  models
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
