--- a/robominer_description/CMakeLists.txt
+++ b/robominer_description/CMakeLists.txt
@@ -47,4 +47,9 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}/
 )
 
+install(DIRECTORY
+  urdf
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
